[package]
name = "gamma-lut"
version = "0.2.0"
authors = ["Mason Chang <mchang@mozilla.com>",
           "Dzmitry Malyshau <dmalyshau@mozilla.com>"]
description = "Rust port of Skia gamma correcting tables"
keywords = ["gamma"]
license_file = "LICENSE"
repository = "https://github.com/changm/gamma-lut-rs"

[lib]
name = "gamma_lut"
path = "src/lib.rs"

[[example]]
name = "basic"

[dependencies]
log = "0.3"
